keep B4-C action executor Java 17 compatible